compiler/e2e/test/snapshot/bootstrap/not_found_suggestion/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: assert_string
---
stderr:
error: the symbol could not be found
  ╭─ bootstrap/not_found_suggestion/main.pnx:1:23
  │
1 │ import target::inner::Firsts # extra character
  │                       ^^^^^^ the symbol named `Firsts` does not exist in `main::inner`
  │
  = did you mean `First`?

error: the symbol could not be found
  ╭─ bootstrap/not_found_suggestion/main.pnx:2:23
  │
2 │ import target::inner::Secand # incorrect spelling
  │                       ^^^^^^ the symbol named `Secand` does not exist in `main::inner`
  │
  = did you mean `Second`?

error: the symbol could not be found
  ╭─ bootstrap/not_found_suggestion/main.pnx:3:23
  │
3 │ import target::inner::Thir   # incomplete name
  │                       ^^^^ the symbol named `Thir` does not exist in `main::inner`
  │
  = did you mean `Third`?



stdout:
